clusters/wrtk8s/romm/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: romm
  namespace: romm
spec:
  replicas: 1
  selector:
    matchLabels:
      app: romm
  template:
    metadata:
      labels:
        app: romm
    spec:
      containers:
        - name: romm
          image: rommapp/romm:5.2.0
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: resources
              mountPath: /romm/resources
            - name: redis-data
              mountPath: /redis-data
            - name: library
              mountPath: /romm/library
            - name: assets
              mountPath: /romm/assets
            - name: config
              mountPath: /romm/config
      volumes:
        - name: resources
          persistentVolumeClaim:
            claimName: romm-resources
        - name: redis-data
          persistentVolumeClaim:
            claimName: romm-redis
        - name: library
          persistentVolumeClaim:
            claimName: romm-roms
        - name: assets
          persistentVolumeClaim:
            claimName: romm-assets
        - name: config
          persistentVolumeClaim:
            claimName: romm-config
---
apiVersion: v1
kind: Service
metadata:
  name: romm
  namespace: romm
spec:
  selector:
    app: romm
  ports:
    - port: 8080
      targetPort: 8080
