clusters/wrtk8s/romm/mariadb.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: romm-db
  namespace: romm
spec:
  replicas: 1
  selector:
    matchLabels:
      app: romm-db
  template:
    metadata:
      labels:
        app: romm-db
    spec:
      containers:
        - name: mariadb
          image: mariadb:13
          ports:
            - containerPort: 3306
          volumeMounts:
            - name: data
              mountPath: /var/lib/mysql
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: romm-db
---
apiVersion: v1
kind: Service
metadata:
  name: romm-db
  namespace: romm
spec:
  selector:
    app: romm-db
  ports:
    - port: 3306
      targetPort: 3306
