clusters/wrtk8s/romm/tailscale-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: romm-tailscale
  namespace: romm
spec:
  ingressClassName: tailscale
  rules:
    - host: rom
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: romm
                port:
                  number: 8080
  tls:
    - hosts:
        - rom
